[gd_scene load_steps=13 format=3 uid="uid://kxj36bd1v8xv"]

[ext_resource type="PackedScene" uid="uid://c75cdnyl3gv6y" path="res://player.tscn" id="1_7b36f"]
[ext_resource type="Script" path="res://main.gd" id="1_tnd8o"]
[ext_resource type="PackedScene" uid="uid://bao7f3fj1n315" path="res://mob.tscn" id="2_xeju2"]
[ext_resource type="FontFile" uid="uid://cmybgbshpcxkq" path="res://Assets/fonts/Montserrat-Medium.ttf" id="4_q3dn7"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="5_ansk0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jic7s"]

[sub_resource type="PlaneMesh" id="PlaneMesh_caupj"]
material = SubResource("StandardMaterial3D_jic7s")
size = Vector2(60, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_5km70"]
size = Vector3(60, 0.1, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3sci8"]
albedo_color = Color(0.941406, 0.54563, 0.0367737, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_od5bd"]
material = SubResource("StandardMaterial3D_3sci8")

[sub_resource type="Curve3D" id="Curve3D_ewgdh"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -12.9734, 0, -13.8697, 0, 0, 0, 0, 0, 0, 12.8649, 0, -14.0615, 0, 0, 0, 0, 0, 0, 12.9494, 0, 13.945, 0, 0, 0, 0, 0, 0, -13.1818, 4.88162e-05, 14.0998, 0, 0, 0, 0, 0, 0, -12.9734, 0, -13.8697),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_2fh2m"]
default_font = ExtResource("4_q3dn7")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_tnd8o")
mob_scene = ExtResource("2_xeju2")

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_caupj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_5km70")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 31, 21)
shadow_enabled = true
directional_shadow_mode = 0

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
metadata/_edit_group_ = true

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0
far = 100.0

[node name="Player" parent="." instance=ExtResource("1_7b36f")]

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -14)
mesh = SubResource("CylinderMesh_od5bd")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -14)
mesh = SubResource("CylinderMesh_od5bd")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 14)
mesh = SubResource("CylinderMesh_od5bd")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 14)
mesh = SubResource("CylinderMesh_od5bd")

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
curve = SubResource("Curve3D_ewgdh")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00742269, 0, -0.999972, 0, 1, 0, 0.999972, 0, 0.00742269, -12.9734, 0, -13.8697)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2fh2m")
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 81.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_ansk0")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter To Retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_timer_timeout"]
